完善 V1.0 Notification 批量重试
